# python-project-template

./: .editorconfig  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CLAUDE.sample.md  README.md  pyproject.toml
.claude/: README.md  WORKFLOW.md  claude-code-features.md  review-20260222-ko.md  review-20260222.md  settings.json  settings.sample.json
.claude/agents/: README.md  use-case-data-patterns.md
.claude/claude-code-ref/: 01-claude-md.md  02-skills.md  03-hooks.md  04-subagents.md  05-agent-teams.md  06-mcp.md  07-plugins.md  08-settings.md  09-context.md  10-checkpointing.md  11-interactive-mode.md  12-cli-reference.md  13-sandbox.md  README.md
.claude/commands/: resume-work.md  resume.md  review-team.md
.claude/commands.nouse/: README.md  review-guidelines.md  review-team.md
.claude/hooks/: check-commit-convention.sh  check-external-lib-usage.sh  check-new-test-file.sh  check-pre-commit-gate.sh  guard-settings-files.sh
.claude/hooks.nouse/: check-commit-convention.sh
.claude/rules/: code-navigation-guidelines.md  coding-guidelines.md  commit-convention.md  document-management.md  markdown-reading-guidelines.md  thinking-guidelines.md
.claude/skills.nouse/: README.md
docs/: guide-claude-code-features.md  guide-development-workflow.md  guide-hooks.md  guide-rules.md  guide-template-management.md  guide-workflow.md
proposals/20260222/: proposal-fix-template-upstream-proposal-path.md  proposal-remove-hardcoded-local-paths-from-skills.md  proposal-template-upstream-skill-context.md
scripts/: init-project.sh
(+32 files in other folders)
